--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-slick": "^0.29.0",
     "reactstrap": "^9.1.6",
     "styled-components": "^5.3.9"
   },
