--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "install": "^0.13.0",
     "npm": "^9.6.2",
